# BitLink

./: .CMakeLists.txt.swp  .gitignore  .gitreview  CMakeLists.txt  README.md
config/: .test.conf.swp  complete_server_config.conf  docker.conf  server_config.conf  shortener_config.conf  test.conf
data/: test.html
data/static1/: index.html  test.txt
data/static2/: about.html  index.html  info.txt
docker/: .Dockerfile.swp  Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile
include/: common_exceptions.h  config_parser.h  fake_file_system.h  file_system.h  handler_dispatcher.h  handler_registry.h  handler_server.h  logger.h  mime_types.h  real_file_system.h  request.h  response.h  server.h  server_config.h  session.h
include/database/: database_interface.h  sqlite_database.h
include/handlers/: api_handler.h  base_handler.h  echo_handler.h  health_handler.h  not_found_handler.h  sleep_handler.h  static_file_handler.h  url_shortener_handler.h
include/models/: link_data.h
include/services/: file_upload_service.h  url_shortening_service.h
include/utils/: file_validator.h  http_parser.h  json_builder.h  qr_generator.h  slug_generator.h  thread_generator.h  url_validator.h
src/: config_parser.cc  fake_file_system.cc  handler_dispatcher.cc  handler_registry.cc  handler_server.cc  logger.cc  logger.h  main.cc  mime_types.cc  real_file_system.cc  request.cc  response.cc  server.cc  server.h  server_config.cc  session.cc  session.h
src/database/: sqlite_database.cc
src/handlers/: api_handler.cc  echo_handler.cc  health_handler.cc  not_found_handler.cc  static_file_handler.cc  url_shortener_handler.cc
src/models/: link_data.cc
src/services/: file_upload_service.cc  url_shortening_service.cc
src/utils/: file_validator.cc  http_parser.cc  json_builder.cc  qr_generator.cc  slug_generator.cc  thread_generator.cc  url_validator.cc
tests/: .test_integration.sh.swp  api_handler_test.cc  backslash_double_config  backslash_escaping_config  concurrency_test.cc  concurrency_test.sh  config_parser_test.cc  double_quote_config  echo_handler_test.cc  empty_statements_config  file_upload_service_test.cc  file_validator_test.cc  handler_dispatcher_test.cc  handler_registry_test.cc  handler_server_test.cc  health_handler_test.cc  http_parser_test.cc  invalid_left_parenthesis_config  invalid_right_parenthesis_config  json_builder_test.cc  link_data_test.cc  logger_rotation_test.cc  logger_test.cc  mime_types_test.cc  qr_generator_test.cc  request_test.cc  response_test.cc  sample_requests.sh  server_config_test.cc  server_test.cc  session_test.cc  single_quote_config  single_quote_error_config  slug_generator_test.cc  sqlite_database_test.cc  start_block_error_config  statement_end_error_config  static_file_handler_test.cc  test2  test_integration.sh  (+5 more)
tests/test_configs/: double_quote_error_config  nested_loop_config  not_inline_comment_config  number_before_colon_config
